# your-police-events

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  railway.toml
api/: ordnance_survey.py  police_uk.py
database/: __init__.py  duckdb_client.py  sync.py  sync_state.py  sync_strategy.py
jules-scratch/verification/: verify_stats_display.py
middleware/: monitoring.py  rate_limit.py
services/: calendar.py  location.py
static/: index.html
tests/: __init__.py  conftest.py  test_calendar_service.py  test_duckdb_client.py  test_location_service.py  test_smart_sync.py  test_status_endpoint.py  test_sync_state.py  test_url_storage.py
utils/: error_messages.py
